@@ -995,11 +995,6 @@ html.ms .propform {
         &:not(.recipient) {
             user-select: text;
         }
-
-        &.input {
-            flex: 1;
-            min-width: 100px;
-        }
     }
 
     input {
