@@ -5,6 +5,7 @@ CHANGELOG Roundcube Webmail
 - Enigma: Fix so using list checkbox selection does not load the key preview frame
 - Password: Make chpass-wrapper.py Python 3 compatible (#7135)
 - Elastic: Fix bug where it was possible to switch editor mode when 'htmleditor' was in 'dont_override' (#7143)
+- Elastic: Fix text selection in recipient inputs (#7129)
 - Fix regression where "Open in new window" action didn't work (#7155)
 - Fix PHP Warning: array_filter() expects parameter 1 to be array, null given in subscriptions_option plugin (#7165)
 - Fix unexpected error message when mail refresh involves folder auto-unsubscribe (#6923)
